tests/async_iteration/async_iteration.exp
Error --------------------------------------------------- delegate_yield.js:3:19

Error: delegate_yield.js:3
  3:     var x: void = yield; // error: number ~> void
                       ^^^^^ Cannot assign `yield` to `x` because number [1] is incompatible with undefined [2].
  References:
    7: delegate_next().next(0);
                            ^ [1]: number
    3:     var x: void = yield; // error: number ~> void
                  ^^^^ [2]: undefined

Error --------------------------------------------------- delegate_yield.js:17:6

Error: delegate_yield.js:17
 17:     (x: void); // error: number ~> void
          ^ Cannot cast `x` to undefined because number [1] is incompatible with undefined [2].
  References:
   11:     yield 0;
                 ^ [1]: number
   17:     (x: void); // error: number ~> void
               ^^^^ [2]: undefined

Error -------------------------------------------------- delegate_yield.js:25:17

Error: delegate_yield.js:25
 25:   var x: void = yield *inner(); // error: number ~> void
                     ^^^^^^^^^^^^^^ Cannot assign `yield* inner()` to `x` because number [1] is incompatible with undefined [2].
  References:
   23:     return 0;
                  ^ [1]: number
   25:   var x: void = yield *inner(); // error: number ~> void
                ^^^^ [2]: undefined

Error -------------------------------------------------------- generator.js:23:6

Error: generator.js:23
 23:     (line: void); // error: string ~> void
          ^^^^ Cannot cast `line` to undefined because string [1] is incompatible with undefined [2].
  References:
    2:   readLine(): Promise<string>;
                             ^^^^^^ [1]: string
   23:     (line: void); // error: string ~> void
                  ^^^^ [2]: undefined

Error ------------------------------------------------------------ return.js:6:4

Error: return.js:6
  6:   (result.value: void); // error: string | number ~> void
        ^^^^^^^^^^^^ Cannot cast `result.value` to undefined because number [1] is incompatible with undefined [2].
  References:
    5: gen.return(0).then(result => {
                  ^ [1]: number
    6:   (result.value: void); // error: string | number ~> void
                        ^^^^ [2]: undefined

Error ------------------------------------------------------------ return.js:6:4

Error: return.js:6
  6:   (result.value: void); // error: string | number ~> void
        ^^^^^^^^^^^^ Cannot cast `result.value` to undefined because string [1] is incompatible with undefined [2].
  References:
    1: declare var gen: AsyncGenerator<void,string,void>;
                                            ^^^^^^ [1]: string
    6:   (result.value: void); // error: string | number ~> void
                        ^^^^ [2]: undefined

Error ----------------------------------------------------------- return.js:20:6

Error: return.js:20
 20:     (result.value: string); // error: number | void ~> string
          ^^^^^^^^^^^^ Cannot cast `result.value` to string because number [1] is incompatible with string [2].
  References:
   15:     return 0;
                  ^ [1]: number
   20:     (result.value: string); // error: number | void ~> string
                          ^^^^^^ [2]: string

Error ----------------------------------------------------------- return.js:20:6

Error: return.js:20
 20:     (result.value: string); // error: number | void ~> string
          ^^^^^^^^^^^^ Cannot cast `result.value` to string because undefined [1] is incompatible with string [2].
  References:
  493:   | { done: true, +value?: Return }
                                  ^^^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:493
   20:     (result.value: string); // error: number | void ~> string
                          ^^^^^^ [2]: string

Error ------------------------------------------------------------ throw.js:12:8

Error: throw.js:12
 12:       (value: void); // error: number ~> void
            ^^^^^ Cannot cast `value` to undefined because number [1] is incompatible with undefined [2].
  References:
    3:     yield 0;
                 ^ [1]: number
   12:       (value: void); // error: number ~> void
                     ^^^^ [2]: undefined

Error ------------------------------------------------------------ throw.js:29:8

Error: throw.js:29
 29:       (value: void); // error: number ~> void
            ^^^^^ Cannot cast `value` to undefined because number [1] is incompatible with undefined [2].
  References:
   19:     yield 0;
                 ^ [1]: number
   29:       (value: void); // error: number ~> void
                     ^^^^ [2]: undefined


Found 10 errors
